--- a/src/Pages/registration/style.css
+++ b/src/Pages/registration/style.css
@@ -1,7 +1,19 @@
 .registration-root {
   width: 100%;
+  height: 100vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+}
+.form-submit {
+  display: flex;
+  flex-direction: column;
+  border: 2px solid #000;
+  padding: 5rem;
+  width: 27%;
+}
+.form-submit > .form-input {
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
 }
