--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,72 @@
+/*Primary styles*/
+.form-input {
+  padding: 0.5rem;
+}
+.form-input:focus {
+  outline: none;
+  border-color: #5590ed;
+  /* box-shadow: 0 0 5px rgba(91, 157, 217, 0.5); */
+}
+.form-input:disabled {
+  background-color: #f0f0f0;
+  cursor: not-allowed;
+}
+.form-input::placeholder {
+  color: #999;
+  font-style: italic;
+}
+.btn {
+  display: inline-block;
+  padding: 10px 20px;
+  font-size: 16px;
+  font-weight: bold;
+  text-align: center;
+  text-decoration: none;
+  cursor: pointer;
+  border: none;
+  border-radius: 4px;
+  background-color: #5b9dd9;
+  color: #fff;
+}
+.btn:hover {
+  background-color: #4492cc;
+}
+
+.btn:focus {
+  outline: none;
+  box-shadow: 0 0 5px rgba(91, 157, 217, 0.5);
+}
+.btn:active {
+  background-color: #3b81b5;
+}
+.btn:disabled {
+  background-color: #f0f0f0;
+  color: #999;
+  cursor: not-allowed;
+}
+.btn.icon {
+  padding: 10px;
+  background-color: transparent;
+  color: #5b9dd9;
+  border: none;
+}
+.btn.border {
+  border: 2px solid #5b9dd9;
+}
+.btn.rounded {
+  border-radius: 50%;
+}
+.btn.text {
+  background-color: transparent;
+  color: #5b9dd9;
+}
+.btn.link {
+  background-color: transparent;
+  border: none;
+  color: #5b9dd9;
+  text-decoration: underline;
+}
+/*Primary styles*/
 header.header-root {
   width: 100%;
   height: 50px;
